--- a/style.css
+++ b/style.css
@@ -135,7 +135,17 @@ header {
     position: relative;
     
 }
-
+.col{
+    background-color: aqua;
+    border: 1px solid black;
+    margin: 40px;
+    height: 500px;
+    width: 400px;
+}
+.linkedin{
+    width: 20%;
+    height: 50%;
+}
 
 
 
