--- a/style.css
+++ b/style.css
@@ -1,165 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300;700&display=swap');
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    
-}
-
 body {
-    font-family: "Merriweather", serif;
-}
-section{
-    display: flex;
-    flex-direction: row;
-}
-.imagen-compu{
-    position: relative;
-    right: 10px;
+  background-color: rgba(211, 241, 162, 0.7725490196);
 }
 
-/* ======= Main ======= */
-main {
-    display: flex;
-    flex-direction: row;
-    height: 100vh;
+.carousel-img-w, .carousel-img-l, .carousel-img-ig {
+  max-width: 100px;
+  margin-left: 500px;
 }
 
-/* ======= Navbar ======= */
-header {
-    position: absolute;
-    top: 5vh;
-    left: 4vh;
-    width: calc(100% - 80px);
-    z-index: 10;
-    
-}
-
-.navbar {
-    display: flex;
-    justify-content: flex-start;
-    gap: 4vh;
-    
-}
-
-.navbar ul {
-    display: flex;
-    list-style: none;
-    gap: 4vh;
-    
-}
-
-.nav-link {
-    text-decoration: none;
-    color: black;
-    font-weight: 300;
-    font-size: 14px;
-    position: relative;    
-}
-
-.nav-link::after {
-  content: '';
-  display: block;
-  width: 0%;
-  height: 1px;
-  background: black;
-  transition: width 0.3s;
-  margin-top: 4px;
-}
-.nav-link:hover::after {
-    width: 100%; /* Se expande al pasar el mouse */
-}
-
-
-
-
-
-
-
-
-/* === Sección Izquierda: Texto === */
-.main-section {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 60px;
-    gap: 20px;
-}
-.main-section h4 {
-    font-size: 20px;
-    font-weight: 300;
-    letter-spacing: 2px;
-}
-
-.main-section h1 {
-    font-size: 80px;
-    font-weight: 700;
-    line-height: 1;
-}
-.second-main-section p {
-    font-size: 16px;
-    font-weight: 300;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-}
-/* === Sección Derecha: Imagen === */
-.imagen-compu {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 40px;
-}
-.imagen-compu img {
-    max-width: 100%;
-    height: auto;
-}
-
-.carousel{
-    margin-left: 250px;
-    margin-bottom: 150px;
-}
-
-.carousel-img-w {
-    max-width: 200px;
-    max-height: 200px;
-    margin: auto;
-    background-color: rgba(22, 163, 22, 0.788); /* Verde claro y transparente */
-    padding: 10px;
-    border-radius: 10px;
-}
-.carousel-img-l {
-    max-width: 200px;
-    max-height: 200px;
-    margin: auto;
-}
-.carousel-img-ig {
-    max-width: 200px;
-    max-height: 200px;
-    margin: auto;
-}
-
-.carousel-img {
-    max-width: 400px;
-    max-height: 400px;
-    margin: auto;
-}
-
-.carousel-control-prev-icon,
-.carousel-control-next-icon {
-    filter: invert(1);
-}
-
-
-
-/* Footer opcional */
-footer {
-    position: absolute;
-    top: 95vh;
-    left: 40px;
-    font-size: 12px;
-    color: rgb(0, 0, 0);
-    z-index: 1;
-}
+/*# sourceMappingURL=style.css.map */
