--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,10 +1,10 @@
 // BASE
 @use "./partials/base/reset";
 @use "./partials/base/tipografia";
+@use "./partials/base/mixins"; 
+@use "./partials/base/extends";
 
 // COMPONENTS
 @use "./partials/components/footer";
 @use "./partials/components/general";
 @use "./partials/components/navbar";
-
-
