--- a/scss/partials/components/_footer.scss
+++ b/scss/partials/components/_footer.scss
@@ -1,7 +1,9 @@
+@use "../base/extends";
+
 footer {
-  position:static;
-  bottom: 0;
-  width: 100%;
-  background: #ffeaea;
-  padding: 10px 0;
+    position: static;
+    bottom: 0;
+    background: #ffeaea;
+    // Extendemos el estilo base
+    @extend %section-base; 
 }
