--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -17,13 +16,51 @@ footer {
 footer {
   position: static;
   bottom: 0;
-  background: #ffeaea;
+}
+
+main.container {
+  padding-top: 100px;
+  padding-bottom: 50px;
+}
+
+.carousel-img {
+  max-width: 100%;
+  height: auto;
+}
+
+.row {
+  margin-left: 2%;
+  max-width: 80%;
+  max-height: 70%;
+}
+
+.car {
+  margin-left: 20%;
+}
+
+.about-img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 10px;
+  margin-top: 20px;
+}
+
+@media (min-width: 400px) {
+  .about-img {
+    margin-top: 0;
+  }
+}
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 main {
   display: flex;
   flex-direction: row;
   height: 100vh;
+  flex: 1;
 }
 
 .main-section {
@@ -73,8 +110,8 @@ header {
 }
 
 .img-plato {
-  max-width: 500px; /* Ajusta este valor según lo necesites */
-  height: auto; /* Mantiene la proporción de la altura */
+  max-width: 500px;
+  height: auto;
 }
 
 .navbar {
